# equity-alpha-research-pipeline

./: README.md  pyproject.toml  requirements.txt
data/universe/: example_universe_300.csv  example_universe_50.csv
outputs/demo/: baseline_daily_backtest.csv  baseline_regime_summary.csv  baseline_summary.csv  improved_daily_backtest.csv  improved_regime_summary.csv  improved_summary.csv  rank_ic_summary.csv  resume_metrics.json  slippage_sensitivity.csv  strategy_comparison.csv
src/equity_alpha/: __init__.py  backtest.py  data.py  features.py  metrics.py  portfolio.py  reporting.py  run_pipeline.py  signals.py
src/equity_alpha_research_pipeline.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_metrics.py
